--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,23 @@ body {
 .login p {
   margin: 1em;
 }
+.dashboard h3 {
+  margin-top: 0.6em;
+}
+.dashboard .card {
+  background: #f8f5f5;
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 20px;
+  padding: 0;
+  margin-top: 1em;
+}
+.dashboard p {
+  margin: 0;
+}
+.dashboard .product-name {
+  font-weight: 600;
+}
+.dashboard .product-price {
+  color: #4cbc30;
+  font-weight: 600;
+}
