--- a/src/index.css
+++ b/src/index.css
@@ -19,11 +19,17 @@ body {
   margin-top: 0.6em;
 }
 .dashboard .card {
+  cursor: pointer;
+  color: black;
   background: #f8f5f5;
   box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 20px;
-  padding: 0;
-  margin-top: 1em;
+}
+.dashboard .card:hover {
+  box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.25);
+}
+.link-card-dashboard:hover {
+  text-decoration: none;
 }
 .dashboard p {
   margin: 0;
