--- a/src/index.css
+++ b/src/index.css
@@ -22,11 +22,12 @@ body {
   cursor: pointer;
   color: black;
   background: #f8f5f5;
-  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.25);
   border-radius: 20px;
+  margin: 0.5em;
 }
 .dashboard .card:hover {
-  box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.25);
+  box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.25);
 }
 .link-card-dashboard:hover {
   text-decoration: none;
@@ -40,4 +41,29 @@ body {
 .dashboard .product-price {
   color: #4cbc30;
   font-weight: 600;
+}
+.card {
+  display: grid;
+  grid-template-columns: 60% 40%;
+}
+.card-body {
+  grid-column: 1;
+}
+.card-image {
+  grid-column: 2;
+  height: 100%;
+  width: 100%;
+  white-space: nowrap;
+  text-align: center;
+}
+.helper {
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+}
+.card img {
+  border-radius: 15px;
+  max-width: 90%;
+  vertical-align: middle;
+  max-height: 80%;
 }
