--- a/src/index.css
+++ b/src/index.css
@@ -67,3 +67,37 @@ body {
   vertical-align: middle;
   max-height: 80%;
 }
+.food-details textarea {
+  margin: 1em auto;
+  display: block;
+  width: 90%;
+}
+.increment,
+.order-btn {
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+}
+.increment button {
+  border-radius: 100%;
+  border: none;
+  padding: 0.5em 1em;
+  margin: 1em;
+  outline: none;
+}
+.order-btn {
+  border: none;
+  border-radius: 10px;
+  padding: 0.5em 2em;
+  background: #4cbc30;
+  color: white;
+  margin: 1em auto;
+}
+.order-btn:focus {
+  outline: none;
+}
+.card-details {
+  text-align: center;
+  display: inherit;
+  background: #f8f5f5;
+}
