--- a/src/index.css
+++ b/src/index.css
@@ -129,3 +129,10 @@ body {
   width: 100%;
   border-radius: 10px;
 }
+.clickable-badge:hover {
+  cursor: pointer;
+}
+.post-product img {
+  width: 80%;
+  border-radius: 10px;
+}
