--- a/src/index.css
+++ b/src/index.css
@@ -195,3 +195,34 @@ body {
   padding: 2em 1em;
   margin: 0.2em;
 }
+.profile-header-container {
+  margin: 0 auto;
+  text-align: center;
+}
+
+.profile-header-img > img.img-circle {
+  width: 120px;
+  height: 120px;
+  border: 2px solid #51d2b7;
+  border-radius: 50%;
+}
+
+.profile-header {
+  margin-top: 43px;
+}
+
+/**
+* Ranking component
+*/
+.rank-label-container {
+  margin-top: -19px;
+  /* z-index: 1000; */
+  text-align: center;
+}
+
+.label.label-default.rank-label {
+  background-color: #34a362;
+  padding: 5px 10px 5px 10px;
+  border-radius: 27px;
+  color: white;
+}
